# Stacker

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/io/: mod.rs  raw.rs  standard.rs
src-tauri/src/stacking/: align.rs  blend.rs  mod.rs  sharpness.rs  utils.rs
src/components/: DropZone.svelte  ExportPanel.svelte  ImageList.svelte  Preview.svelte  StatusBar.svelte
